[296882]: [xpath2] FindBugs reports some possible bugs https://bugs.eclipse.org/bugs/show_bug.cgi?id=296882